Convert tasks.js to typescript. Fix css overflow issue on main html.

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 #app {
